[package]
name = "WEBKIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
gtk = "0.15"
gio = "0.15.12"
glib = "0.15.12"
webkit2gtk = "0.18.0"
cairo-rs = { version = "0.15", features = ["png"] }
